--- a/Elon vs BTC.ipynb
+++ b/Elon vs BTC.ipynb
@@ -9,7 +9,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "<img src=\"https://fontmeme.com/permalink/230525/451b9f43d37c3dde765571c4e6da3000.png\" alt=\"exima-geometric-font\" border=\"0\">\n",
     "\n",
     "<img src=\"https://fontmeme.com/permalink/230525/f83f20ffd6954cb72004b0ca7f862f71.png\" alt=\"simply-sans-font\" border=\"0\">\n",
@@ -24,11 +23,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Introduction**"
+    "# **1 Introduction**"
    ]
   },
   {
@@ -40,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Case Study\n",
+    "## 1.1 Case Study\n",
     "\n",
     "<font size=\"3\">On May 13, 2022, Elon Musk, the CEO of Tesla and a prominent figure in the cryptocurrency community, made a significant announcement on Twitter. In his tweet, Musk stated that Tesla would no longer accept Bitcoin as a form of payment. This unexpected decision sent shockwaves through the Bitcoin community and had a noticeable impact on the price of Bitcoin.</font>\n",
     "\n",
@@ -50,11 +48,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Google Causal Impact\n",
+    "## 1.2 Google Causal Impact\n",
     "\n",
     "<font size=\"3\">The \"Google Causal Impact\" is a statistical approach used to estimate the causal impact of a particular event on a target variable, while accounting for various other factors that may influence the outcome. It is based on Bayesian structural time series models and is particularly effective in evaluating the impact of stock/crypto price change, marketing campaigns, policy changes, or other interventions. Google Causal Impact package was initially developed for \"R\" by Google team, later the packege was imported to \"python\"</font>\n",
     "\n",
@@ -62,19 +59,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Model Implementation**"
+    "# **2 Model Implementation**"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Libraries, Dates, Data\n",
+    "## 2.1 Libraries, Dates, Data\n",
     "\n",
     "<font size=\"3\"><ul>\n",
     "  <li>Import python libraries</li>\n",
@@ -538,7 +533,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -793,11 +787,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis\n",
+    "## 2.2 Analysis\n",
     "\n",
     "<font size=\"3\"><ul>\n",
     "  <li>Create training dataframe</li>\n",
@@ -1092,7 +1085,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1212,11 +1204,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Creation\n",
+    "## 2.3 Model Creation\n",
     "\n",
     "<font size=\"3\"><ul>\n",
     "  <li>Define Pre & Post period</li>\n",
@@ -1279,7 +1270,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1321,11 +1311,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interpretation\n",
+    "## 2.4 Interpretation\n",
     "\n",
     "<font size=\"3\">The average value of the response variable during the post-intervention period was around 43971.47. If the intervention had not taken place, we would have expected an average response of 49543.17.The 95% interval for this expected value ranges from 47823.92 to 51362.75. That means if Elon Musk did not make that tweet the Bitcoin avarage price would be 49543.17 around that period, but because of the tweet the actual average Bitcoin price fall to 43971.47</font>\n",
     "\n",
@@ -1337,11 +1326,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Conclusion**\n",
+    "# **3 Conclusion**\n",
     "\n",
     "<font size=\"3\">By applying the Google Causal Impact we are able to prove there is a negative effect between the Elon Musk's Bitcoin tweet and the Bitcoin price fall. Understanding and analyzing causal relationships in cryptocurrency markets are crucial for investors, traders, policymakers, and researchers alike. By leveraging techniques like Google Causal Impact, we can gain a deeper understanding of the dynamics within these markets and make more informed decisions. This analysis serves as a reminder of the interconnectedness of social media, public figures, and the cryptocurrency landscape, and the potential implications of their interactions on market behavior.</font>\n",
     "\n",
